--- a/Changes
+++ b/Changes
@@ -1,5 +1,15 @@
 Revision history for Perl extension Net::Traces::TSH.
 
+0.13 Mon Aug 30 2004
+   - Added configure() to ease configuration setting.
+   - process_trace() can now convert a TSH trace to tcpdump and ns2
+     formats (see module documentation) in addition to collecting
+     per-interface and aggregate protocol usage statistics. The
+     parameters passed to process_trace() has been reduced to one: the
+     TSH trace filename to be processed.
+   - Updated applications/tsh2tcpdump.pl.
+   - Additional tests released.
+
 0.12 Sat Aug 21 2004
    - Code updates and minor fixes.  Use autouse for Carp.
    - POD updates and editorial changes.
