--- a/README
+++ b/README
@@ -112,7 +112,7 @@ DESCRIPTION
     different interfaces. For example, the daily TSH traces from the NLANR
     PMA repository typically contain records from two different interfaces.
     In such cases, incoming and outgoing traffic can be differentiated based
-    on the interface number (despite the scrabling of IP addresses to
+    on the interface number (despite the scrabbling of IP addresses to
     protect privacy). "Net::Traces::TSH" users may be interested in
     collecting statistical information for each interface separately or
     aggregating across the entire trace. "Net::Traces::TSH" uses two hashes
@@ -297,6 +297,32 @@ FUNCTIONS
     "Net::Traces::TSH" does not export any functions by default. The
     following functions, listed in alphabetical order, are exportable.
 
+  configure
+      configure %OPTIONS
+
+    Used to specify verbosity, the link capacity, and the types of outputs
+    requested. For example,
+
+     configure(
+               # Display progress information, equivalent to calling verbose()
+               #
+               Verbosity       => 1, # default is 0, no progress information
+
+               'Link Capacity' => 100_000_000, # bits per second
+
+               # Convert the TCP records in the TSH trace to tcpdump
+               # format and store in 'trace.tcpdump'.
+               #
+               tcpdump         => 'trace.tcpdump',
+
+               # Convert the TCP data-carrying segment records to binary
+               # ns2 traffic trace format.  Create one binary file per
+               # interface and use 'trace.ns2' as the file prefix.
+               #
+               ns2         => 'trace.ns2',
+
+              );
+
   date_of
       date_of FILENAME
 
@@ -344,45 +370,13 @@ FUNCTIONS
 
   process_trace
      process_trace FILENAME
-     process_trace FILENAME, TCPDUMP_OUTPUT
-     process_trace FILENAME, TCPDUMP_OUTPUT, NUMBER
 
-    If called in a void context process_trace() examines the binary TSH
-    trace stored in FILENAME, and populates %Trace and %Interfaces.
+    In a void context, process_trace() examines the binary TSH trace stored
+    in FILENAME, and populates %Trace and %Interfaces.
 
-    If TCPDUMP_OUTPUT is specified, process_trace() generates a text file
-    based on the trace records in a format similar to the modified output of
-    tcpdump, as presented in *TCP/IP Illustrated Volume 1* by W. R. Stevens
-    (see pp. 230-231).
-
-    You can use such an output as input to other tools, present real traffic
-    scenarios in a classroom, or simply "eyeball" the trace. For example,
-    here are the first ten lines of the contents of such a file:
-
-     0.000000000 10.0.0.1.6699 > 10.0.0.2.55309: . ack 225051666 win 65463
-     0.000014000 10.0.0.3.80 > 10.0.0.4.14401: S 457330477:457330477(0) ack 810547499 win 34932
-     0.000014000 10.0.0.1.6699 > 10.0.0.2.55309: . 3069529864:3069531324(1460) ack 225051666 win 65463
-     0.000024000 10.0.0.5.12119 > 10.0.0.6.80: F 2073668891:2073668891(0) ack 183269290 win 64240
-     0.000034000 10.0.0.7.4725 > 10.0.0.8.445: S 3152140131:3152140131(0) win 16384
-     0.000067000 10.0.0.1.6699 > 10.0.0.2.55309: P 3069531324:3069531944(620) ack 225051666 win 65463
-     0.000072000 10.0.0.11.3381 > 10.0.0.12.445: S 1378088462:1378088462(0) win 16384
-     0.000083000 10.0.0.13.1653 > 10.0.0.1.6699: P 3272208349:3272208357(8) ack 501563814 win 32767
-     0.000093000 10.0.0.14.1320 > 10.0.0.15.445: S 3127123478:3127123478(0) win 64170
-     0.000095000 10.0.0.4.14401 > 10.0.0.3.80: R 810547499:810547499(0) ack 457330478 win 34932
-
-    Note that this output is similar to what tcpdump with options "-n" and
-    "-S" would have produced. The only missing fields are related to the TCP
-    options negotiated during connection setup. Unfortunately, TSH records
-    include only the first 16 bytes of the TCP header, making it impossible
-    to record the options from the segment header.
-
-    NUMBER specifies the capacity of the monitored link in bits per second
-    (b/s). If not specified, it defaults to 155,520,000.
-
-   Context matters
-    When called in a list context process_trace() in addition to collecting
-    summary statistics, it extracts all TCP flows and TCP data-carrying
-    segments from the trace, returning two hash references. For example,
+    In a list context process_trace() in addition to collecting summary
+    statistics, it extracts all TCP flows and TCP data-carrying segments
+    from the trace, returning two hash references. For example,
 
      my ($senders_href, $segments_href) = process_trace 'trace.tsh';
 
@@ -454,6 +448,73 @@ FUNCTIONS
     CPAN version of the module. Contact me if you want to get a copy of the
     bleeding edge version.
 
+   Using a TSH trace in ns2 simulations
+    In addition to extracting %senders and %segments, "Net::Traces::TSH"
+    allows you to generate binary files suitable for driving ns2
+    simulations. For example,
+
+     configure(ns2 => 'some.tsh');
+
+     process_trace 'some.tsh';
+
+    After the call to configure(), process_trace() will generate a binary
+    file for each interface found in the trace. For example, assume that
+    some.tsh has recorded traffic from two interfaces, 1 and 2.
+    process_trace() will generate two binary files:
+
+      some.tsh-if1.bin
+      some.tsh-if2.bin
+
+    Each of these files can be used in ns2 simulations in conjunction
+    Application/Traffic/Trace. For example, the following ns2 script
+    fragment illustrates how to attach some.tsh-if2.bin to a traffic source
+
+     # ...
+
+     # Initialize a trace file
+     #
+     set tfile [new Tracefile]
+     $tfile filename some.tsh-2.bin
+
+     # Attach the tracefile
+     #
+     set trace [new Application/Traffic/Trace]
+     $trace attach-tracefile $tfile
+
+     # ...
+
+   Converting TSH to tcpdump
+    If you would like to extract the TCP traffic and store it in tcpdump
+    format, use
+
+     configure(tcpdump => 'tcpdump_filename');
+
+    before calling process_trace(). process_trace() will generates a text
+    file based on the trace records in a format similar to the modified
+    output of tcpdump, as presented in *TCP/IP Illustrated Volume 1* by W.
+    R. Stevens (see pp. 230-231).
+
+    You can use such an output as input to other tools, present real traffic
+    scenarios in a classroom, or simply "eyeball" the trace. For example,
+    here are the first ten lines of the contents of such a file:
+
+     0.000000000 10.0.0.1.6699 > 10.0.0.2.55309: . ack 225051666 win 65463
+     0.000014000 10.0.0.3.80 > 10.0.0.4.14401: S 457330477:457330477(0) ack 810547499 win 34932
+     0.000014000 10.0.0.1.6699 > 10.0.0.2.55309: . 3069529864:3069531324(1460) ack 225051666 win 65463
+     0.000024000 10.0.0.5.12119 > 10.0.0.6.80: F 2073668891:2073668891(0) ack 183269290 win 64240
+     0.000034000 10.0.0.7.4725 > 10.0.0.8.445: S 3152140131:3152140131(0) win 16384
+     0.000067000 10.0.0.1.6699 > 10.0.0.2.55309: P 3069531324:3069531944(620) ack 225051666 win 65463
+     0.000072000 10.0.0.11.3381 > 10.0.0.12.445: S 1378088462:1378088462(0) win 16384
+     0.000083000 10.0.0.13.1653 > 10.0.0.1.6699: P 3272208349:3272208357(8) ack 501563814 win 32767
+     0.000093000 10.0.0.14.1320 > 10.0.0.15.445: S 3127123478:3127123478(0) win 64170
+     0.000095000 10.0.0.4.14401 > 10.0.0.3.80: R 810547499:810547499(0) ack 457330478 win 34932
+
+    Note that this output is similar to what tcpdump with options "-n" and
+    "-S" would have produced. The only missing fields are related to the TCP
+    options negotiated during connection setup. Unfortunately, TSH records
+    include only the first 16 bytes of the TCP header, making it impossible
+    to record the options from the segment header.
+
   records_in
      records_in FILENAME
 
@@ -468,6 +529,10 @@ FUNCTIONS
     As you might expect, this function sets the verbosity level of the
     module. By default "Net::Traces::TSH" remains "silent". Call verbose()
     to see trace processing progress indicators on standard error.
+
+    As of version 0.13, verbose() is equivalent to
+
+     configure(Verbosity => 1);
 
   write_interface_summaries
      write_interface_summaries
@@ -504,9 +569,9 @@ EXPORTS
     None by default.
 
   Exportable
-    date_of() get_IP_address() get_interfaces_href() get_interfaces_list()
-    get_trace_summary_href() numerically() process_trace() records_in()
-    verbose() write_trace_summary()
+    configure() date_of() get_IP_address() get_interfaces_href()
+    get_interfaces_list() get_trace_summary_href() numerically()
+    process_trace() records_in() verbose() write_trace_summary()
 
     In addition, the following export tags are defined:
 
@@ -522,7 +587,7 @@ EXPORTS
      use Net::Traces::TSH qw(:all);
 
 VERSION
-    This is "Net::Traces::TSH" version 0.12.
+    This is "Net::Traces::TSH" version 0.13.
 
 SEE ALSO
     The NLANR MOAT Passive Measurement and Analysis (PMA) web site at
@@ -538,7 +603,7 @@ SEE ALSO
 
     "Net::Traces::TSH" version 0.11 was presented in YAPC::NA 2004. The
     presentation slides are available at
-    http://www.cs.sunysb.edu/~kostas/art/yapc
+    http://www.cs.stonybrook.edu/~kostas/art/yapc .
 
   DiffServ
     If you are not familiar with Differentiated Services (DiffServ), good
@@ -560,6 +625,11 @@ SEE ALSO
     K. K. Ramakrishnan *et al.*, *The Addition of Explicit Congestion
     Notification (ECN) to IP*, RFC 3168. Available at
     http://www.ietf.org/rfc/rfc3168.txt
+
+  The ns2 network simulator
+    "Net::Traces::TSH" can convert TSH traces to binary files suitable to
+    drive simulations in ns2. More information about ns2 is available at
+    http://www.isi.edu/nsnam/ns/
 
 AUTHOR
     Kostas Pentikousis, kostas@cpan.org.
