--- a/README
+++ b/README
@@ -185,38 +185,38 @@ DESCRIPTION
         The capacity of the monitored link in bits per second (b/s).
 
    Internet Protocol
-    $Trace{IP}{'Total Packets'}
-    $Trace{IP}{'Total Bytes'}
+    $Trace{IP}{Total}{Packets}
+    $Trace{IP}{Total}{Bytes}
         Number of IP packets and bytes, respectively, in the trace. The
         number of IP packets should equal the number of records in the
         trace.
 
         As mentioned earlier, %Trace has virtually the same structure as
         %Interfaces. Therefore, if *$if* is the interface number,
-        $Interfaces{$if}{IP}{'Total Packets'} and
-        $Interfaces{$if}{IP}{'Total Bytes'} contain the number of IP packets
+        $Interfaces{$if}{IP}{Total}{Packets} and
+        $Interfaces{$if}{IP}{Total}{Bytes} contain the number of IP packets
         and bytes, respectively, observed on interface *$if*. The same
         "rule" applies to all %Trace fields presented below.
 
    Fragmentation
-    $Trace{IP}{'DF Packets'}
-    $Trace{IP}{'DF Bytes'}
+    $Trace{IP}{DF}{Packets}
+    $Trace{IP}{DF}{Bytes}
         Number of IP packets and bytes, respectively, requesting no
         fragmentation ('Do not Fragment').
 
-    $Trace{IP}{'MF Packets'}
-    $Trace{IP}{'MF Bytes'}
+    $Trace{IP}{MF}{Packets}
+    $Trace{IP}{MF}{Bytes}
         Number of IP packets and bytes, respectively, indicating that 'More
         Fragments' follow.
 
    Differentiated Services
-    $Trace{IP}{'Normal Packets'}
-    $Trace{IP}{'Normal Bytes'}
+    $Trace{IP}{Normal}{Packets}
+    $Trace{IP}{Normal}{Bytes}
         Number of IP packets and bytes, respectively, requesting no
         particular treatment (best effort traffic). No DiffServ or ECN bits
         are set.
 
-    $Trace{IP}{'Class Selector Packets'}
+    $Trace{IP}{'Class Selector'}{Packets}
     $Trace{IP}{'Class Selector Bytes'}
         Number of IP packets and bytes, respectively, with Class Selector
         bits set.
@@ -226,23 +226,81 @@ DESCRIPTION
         Number of IP packets and bytes, respectively, requesting Assured
         Forwarding Per-Hop Behavior (PHB).
 
-    $Trace{IP}{'EF PHB Packets'}
-    $Trace{IP}{'EF PHB Bytes'}
+    $Trace{IP}{'EF PHB'}{Packets}
+    $Trace{IP}{'EF PHB'}{Bytes}
         Number of IP packets and bytes, respectively, requesting Expedited
         Forwarding Per-Hop Behavior (PHB)
 
    Explicit Congestion Notification
-    $Trace{IP}{'ECT Packets'}
-    $Trace{IP}{'ECT Bytes'}
+    $Trace{IP}{ECT}{Packets}
+    $Trace{IP}{ECT}{Bytes}
         Number of IP packets and bytes, respectively, with either of the ECT
         bits set. These packets should be carrying traffic from ECN-aware
         hosts.
 
-    $Trace{IP}{'CE Packets'}
-    $Trace{IP}{'CE Bytes'}
+    $Trace{IP}{CE}{Packets}
+    $Trace{IP}{CE}{Bytes}
         Number of IP packets and bytes, respectively, with the CE bit set.
         These packets carry ECN-capable traffic that has been marked at an
         ECN-aware router.
+
+   IP Options
+    $Trace{IP}{'No IP Options'}{Packets}
+    $Trace{IP}{'No IP Options'}{Bytes}
+        Number of IP packets and bytes, respectively, carrying no IP header
+        options.
+
+    $Trace{IP}{'IP Options'}{Packets}
+    $Trace{IP}{'IP Options'}{Bytes}
+        Number of IP packets and bytes, respectively, carrying IP header
+        options.
+
+    The following diagram summarizes the %Trace data structure up to here.
+
+     Trace
+       - filename
+       - summary
+       - date
+       - starts
+       - ends
+       - records
+       - interfaces
+       - unidirectional
+       - 'Link Capacity'
+       - IP
+           - Total
+               - Packets
+               - Bytes
+           - DF
+               - Packets
+               - Bytes
+           - MF
+               - Packets
+               - Bytes
+           - Normal
+               - Packets
+               - Bytes
+           - 'Class Selector'
+               - Packets
+               - Bytes
+           - 'AF PHB'
+               - Packets
+               - Bytes
+           - 'EF PHB'
+               - Packets
+               - Bytes
+           - ECT
+               - Packets
+               - Bytes
+           - CE
+               - Packets
+               - Bytes
+           - 'No IP Options'
+               - Packets
+               - Bytes
+           - 'IP Options'
+               - Packets
+               - Bytes
 
    Transport Protocols
     Besides the summary information about the trace itself and statistics
@@ -252,17 +310,17 @@ DESCRIPTION
     with an IANA assigned number (including, of course, TCP and UDP). For
     example,
 
-    $Trace{Transport}{TCP}{'Total Packets'}
-    $Trace{Transport}{TCP}{'Total Bytes'}
+    $Trace{Transport}{TCP}{Total}{Packets}
+    $Trace{Transport}{TCP}{Total}{Bytes}
         Number of TCP segments and the corresponding bytes (including the IP
         and TCP headers) in the trace.
 
-    $Trace{Transport}{UDP}{'Total Packets'}
-    $Trace{Transport}{UDP}{'Total Bytes'}
+    $Trace{Transport}{UDP}{Total}{Packets}
+    $Trace{Transport}{UDP}{Total}{Bytes}
         Ditto, for UDP.
 
-    $Trace{Transport}{ICMP}{'DF Packets'}
-    $Trace{Transport}{ICMP}{'DF Bytes'}
+    $Trace{Transport}{ICMP}{DF}{Packets}
+    $Trace{Transport}{ICMP}{DF}{Bytes}
         Number of ICMP packets and bytes, respectively, with the DF bit set.
 
   Using the Net::Trace::TSH trace summary hashes
@@ -288,8 +346,8 @@ DESCRIPTION
      # ...and generate a summary only if the condition is met.
      #
      write_trace_summary
-        if ( ( $ts_href->{Transport}{TCP}{'Total Bytes'}
-               / $ts_href->{IP}{'Total Bytes'}
+        if ( ( $ts_href->{Transport}{TCP}{Total}{Bytes}
+               / $ts_href->{IP}{Total}{Bytes}
              ) > 0.9
            );
 
@@ -483,6 +541,10 @@ FUNCTIONS
 
      # ...
 
+    Note that both some.tsh-if1.bin and some.tsh-if1.bin include only the
+    *TCP data-carrying segments* in the trace. If you want to convert the
+    *entire* TSH trace to Traffic/Trace files, see "converters/tsh2ns2.pl".
+
    Converting TSH to tcpdump
     If you would like to extract the TCP traffic and store it in tcpdump
     format, use
@@ -587,7 +649,7 @@ EXPORTS
      use Net::Traces::TSH qw(:all);
 
 VERSION
-    This is "Net::Traces::TSH" version 0.13.
+    This is "Net::Traces::TSH" version 0.14.
 
 SEE ALSO
     The NLANR MOAT Passive Measurement and Analysis (PMA) web site at
