--- a/documentation/sample-summary.pod
+++ b/documentation/sample-summary.pod
@@ -25,8 +25,7 @@ the timestamp, usually part of the filename.  Since the trace filename
  Filename,t/sample_input/sample.tsh,Unknown
  Duration,0.937457
  Records,1000
- Number of Interfaces,2
- Link Capacity,155520000
+ Interfaces,2
 
 If the trace filename was F<AIX-1072917725-1.csv>, instead of
 F<sample.tsh>, then first line would have been
